no neighborhood fix, amenity icon spacing and styling

--- a/public/stylesheets/sass/listing.scss
+++ b/public/stylesheets/sass/listing.scss
@@ -72,6 +72,7 @@
   border-radius: 3px;
   margin: 10px 10px;
   display: inline-block;
+  box-sizing: border-box;
 }
 
 .availability-label {
@@ -90,11 +91,16 @@
 }
 
 .amenity-icon {
-  height: 50px;
+  height: 40px;
+  margin-bottom: 8px;
 }
 
-#amenity-icon {
-  height: 50px;
+.amenity-text{
+  font-family: 'Roboto';
+  font-weight: 300;
+  font-size: 15px;
+  color: $dk-gray;
+  line-height: 1.2;
 }
 
 .amenity-item {
